Fix background color cutoff

--- a/src/components/pages/about/about.css
+++ b/src/components/pages/about/about.css
@@ -26,7 +26,6 @@
 .connect-input {
   width: 100%;
   color: #43C19F;
-  background-color: #23585E;
   border: none;
 }
 
@@ -39,7 +38,6 @@
   margin-bottom: 0;
   width: 100%;
   color: #43C19F;
-  background-color: #23585E;
   border: none;
 }
 
