--- a/src/components/pages/work/work.css
+++ b/src/components/pages/work/work.css
@@ -2,7 +2,6 @@
 /* Work Body Section */
 
 .table {
-  background-color: #193549;
   border: none;
   text-align: left;
 }
