--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,7 @@
   max-width: 100%;
   scroll-behavior: smooth;
 }
+
+body {
+  background-color: #193549;
+}
